# crowd-transcription

./: .env.example  .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt
crowdtrans/: __init__.py  cli.py  config.py  config_store.py  database.py  karisma.py  models.py  visage.py
crowdtrans/transcriber/: attachments.py  audio.py  deepgram_client.py  formatter.py  keyterms.py  learner.py  llm_client.py  service.py
crowdtrans/web/: app.py  auth.py
crowdtrans/web/routes/: api.py  compare.py  dashboard.py  learning.py  login.py  settings.py  transcriptions.py  voice.py  worklist.py
crowdtrans/web/static/: app.js
crowdtrans/web/templates/: base.html  dashboard.html  login.html
crowdtrans/web/templates/compare/: detail.html  list.html
crowdtrans/web/templates/learning/: dashboard.html  profile.html
crowdtrans/web/templates/settings/: _test_result.html  index.html
crowdtrans/web/templates/transcriptions/: detail.html  list.html
crowdtrans/web/templates/voice/: detail.html  list.html
crowdtrans/web/templates/worklist/: detail.html  list.html  print.html
data/: custom_corrections.json
deploy/: crowdtrans-service.service  crowdtrans-update.service  crowdtrans-update.timer  crowdtrans-web.service  nfs-mount.sh  setup.sh  update.sh
scripts/: backfill_priority_and_resync_worklist.py  compare_deepgram_vs_report.py  compare_layered.py  explore_karisma_content.py  explore_karisma_db.py  explore_karisma_samples.py  watch_backfill.sh  watch_new_transcriptions.py
tests/: test_visage.py
